--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,11 +61,6 @@ jobs:
           TELEGRAM_USER_ID: ${{ secrets.TELEGRAM_USER_ID }}
           TELEGRAM_BOT_API_KEY: ${{ secrets.TELEGRAM_BOT_API_KEY }}
   rerun-failed-jobs:
-    runs-on: ubuntu-latest
     needs: [ try-create-instance]
     if: failure()
-    steps:
-      - name: Rerun failed jobs in the current workflow
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: gh run rerun ${{ github.run_id }} --failed
+    uses: ./.github/workflows/main.yml
