--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           max_attempts: 3
           timeout_minutes: 10
+          retry_wait_seconds: 60
           retry_on: error
           command: |
             php index.php
